# otomoto-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/: cli.py  database.py  offer_manager.py  pricing_model.py
src/scrapers/: __init__.py  header_utils.py  otomoto_scrapers.py  scraper.py
tests/: test_real_functionality.py  test_system.py
