[project]
name = "otomoto-analysis"
version = "0.1.0"
description = "Car offer analysis from otomoto.pl with database persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.1",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.1",
    "xlsxwriter>=3.2.5",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.20.0",
]

[project.scripts]
otomoto = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]
